# Ignis

./: .gitmodules  CMakeLists.txt  LICENSE  README.md
cmake/: ImGui.cmake
include/: Camera.h  ImGuiLayer.h  Input.h  Renderer.h  Scene.h  Window.h
shaders/: triangle.frag  triangle.vert
src/: Camera.cpp  GameObject.cpp  ImGuiLayer.cpp  Renderer.cpp  Scene.cpp  Window.cpp  main.cpp
